Correction bdatabase